Fixed Alignment issue

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -137,6 +137,15 @@ html {
       color: #222; }
 
 
+/* Some weird shit of my own.*/
+#right-al {text-align: left;}
+@media only screen and (min-width: 550px) {
+                            #right-al {text-align: right;}
+}
+
+
+
+
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
@@ -167,7 +176,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: black; }
+  color: black;
+  text-decoration: none; }
   a:hover {
     color: darkgray; }
 
